tests/semantic/type_system12/type_system12.err
Error: Atoms argument is not a subtype of its declared type in file type_system12.dl at line 38
C(x) :- B(x).                      // Error
--^-----------------------------------------
Error: Atoms argument is not a subtype of its declared type in file type_system12.dl at line 39
C(x) :- !D(x), B(x).               // Error
--^-----------------------------------------
Error: Atoms argument is not a subtype of its declared type in file type_system12.dl at line 39
C(x) :- !D(x), B(x).               // Error
-----------^--------------------------------
3 errors generated, evaluation aborted
